cabal-version:      2.4
name:               zmeika
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrey Hetman
maintainer:         magackame@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable zmeika
    main-is:          Main.hs

    ghc-options: -threaded
    -- Modules included in this executable, other than Main.
    other-modules: Snake, Vec2, Direction, World

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, process, random
    hs-source-dirs:   src
    default-language: Haskell2010
